# adventofcode

2018/: .gitignore  common.py  day10.py  day10.test.py  day11.py  day11.test.py  day12.py  day12.test.py  day13.py  day13.test.py  day2.ipynb  day3.ipynb  day4.py  day4.test.py  day5.py  day5.result  day5.test.py  day6.py  day6.test.py  day7.py  day7.test.py  day8.py  day8.test.py  day9.py  day9.test.py  requirements.txt
2018/1/: Day1.ipynb
2019/: 2.input  Cargo.toml  README.md
2019/examples/: p1a.rs  p1b.rs
2019/fsharp/: README.md  (+2 more)
2019/rust/: .gitignore  Cargo.toml  README.md
2019/rust/examples/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  p1a.rs  p1b.rs
2019/rust/scripts/: run_all_examples
2019/rust/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  lib.rs  p1.rs
2020/: .gitignore  Day1.java  Day10.java  Day11.java  Day12.java  Day13.java  Day14.java  Day15.java  Day16.java  Day17.java  Day17b.java  Day18.java  Day19.java  Day19b.java  Day2.java  Day20.java  Day3.java  Day4.java  Day5.java  Day6.java  Day7.java  Day8.java  Day9.java  GCD.java  README.md  day1.answer.md  day3_short.input
2021/: day12b.py  day13.py  day16a.py  day16b.py
2024/: day10a.py  day10a1.py  day10a2.py  day10b.py  day11a.py  day11b.py  day12a.py  day12b.py  day13a.py  day13b.py  day14a.py  day14b.py  day1a.py  day1b.py  day2a.py  day2b.py  day2b3.py  day2bb.py  day2test.input  day3a.py  day3b.py  day3b2.py  day4a.py  day4b.py  day5a.py  day5b.py  day6a.py  day6b.py  day7a.py  day7b.py  day8a.py  day8b.py  day9a.py  day9b.py
2025/: day1a.py
(+10 files in other folders)
