[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Jamie Ly <jly@ecri.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-format = "0.4.0"
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
petgraph = "0.4.13"